# paho.mqtt.embedded-c

MQTTClient-C/samples/aiot_c_demo/: CMakeLists.txt  aiot_c_demo.c
MQTTClient-C/samples/onenet_c_demo/: CMakeLists.txt  onenet_c_demo.c  onenet_mqtt_sign.c
